Bug 1916355 - [devtools] Make sur waterfall ticks are visible in High Contrast Mode. r=devtools-reviewers,accessibility-frontend-reviewers,jdescottes,nlapre.
This adds a square next to the label in the status bar that serves
as a legend for the tick. The square background re-uses the colors
of the ticks, and those colors are overridden in High Contrast Mode,
using non-system but highly contrasted colors from a palette that
was created by the accessibility team.

In order for the ticks to be visible, we need to make sure that the
background canvas is displayed, and also the call to colorToRGBA needed
a document to properly handle system colors.

Differential Revision: https://phabricator.services.mozilla.com/D223473

--- a/devtools/client/netmonitor/src/assets/styles/StatusBar.css
+++ b/devtools/client/netmonitor/src/assets/styles/StatusBar.css
@@ -27,11 +27,28 @@
 }
 
 .status-bar-label.dom-content-loaded {
-  color: var(--theme-highlight-blue);
+  --bar-label-legend-color: var(--timing-marker-dom-content-loaded-color);
 }
 
 .status-bar-label.load {
-  color: var(--theme-highlight-red);
+  --bar-label-legend-color: var(--timing-marker-load-color);
+}
+
+:is(
+  .status-bar-label.dom-content-loaded,
+  .status-bar-label.load
+)::before {
+  content: "";
+  display: inline-block;
+  width: 12px;
+  aspect-ratio: 1 / 1;
+  align-self: center;
+  margin-inline: 0 4px;
+  /* The --timing-marker-* colors are overriden in High Contrast Mode with non-system
+     highly contrasted colors that we want to use here */
+  forced-color-adjust: none;
+  border: 1px solid CanvasText;
+  background-color: var(--bar-label-legend-color);
 }
 
 .requests-list-network-summary-button {
